Fix media query cut off

--- a/assets/css/components/mobilePrompt.scss
+++ b/assets/css/components/mobilePrompt.scss
@@ -2,7 +2,7 @@
 
 .not-enough-px-warning { display: none; }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 770px) {
 
   .navbar {
     padding: 1.1rem 2rem 1.1rem 2rem!important;
